[gd_scene load_steps=4 format=2]

[ext_resource path="res://default_assets/theme/galactika.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/combat/End_Screen_Character_Summary.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Combat/End_Screen.gd" type="Script" id=4]

[node name="End_Scren" type="Panel"]
visible = false
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -278.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.8
margin_left = 7.62939e-06
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 614.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "Combat Result"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 614.0
margin_bottom = 59.0

[node name="Character_Summary" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 63.0
margin_right = 614.0
margin_bottom = 211.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 215.0
margin_right = 614.0
margin_bottom = 219.0

[node name="Character_Summary2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 223.0
margin_right = 614.0
margin_bottom = 371.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 375.0
margin_right = 614.0
margin_bottom = 379.0

[node name="Character_Summary3" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 383.0
margin_right = 614.0
margin_bottom = 531.0

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
margin_top = 535.0
margin_right = 614.0
margin_bottom = 539.0

[node name="Button" type="Button" parent="."]
anchor_left = 0.35
anchor_top = 0.85
anchor_right = 0.65
anchor_bottom = 0.95
text = "Continue"
__meta__ = {
"_editor_description_": ""
}
